change password; add ports for osx and windows;change start cmd to /usr/bin/nps , nps start isn't run in osx;

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,5 +4,7 @@ services:
   image: "mmfei/nps_server"
   network_mode: "host"
   restart: always
+  ports: 
+    - "8080:8080"
   volumes:
     "./build/conf/:/etc/nps/conf/"
