--- a/build_client/Dockerfile
+++ b/build_client/Dockerfile
@@ -1,6 +1,6 @@
 FROM centos:latest
 LABEL maintainer="wlfkongl@163.com"
-ENV NPS_SERVER_BIN_URL https://github.com/ehang-io/nps/releases/download/v0.26.7/linux_arm64_client.tar.gz 
+ENV NPS_SERVER_BIN_URL https://github.com/ehang-io/nps/releases/download/v0.26.7/linux_amd64_client.tar.gz 
 RUN yum install -y wget;
 RUN mkdir -p /npc;cd /npc ; wget -c  ${NPS_SERVER_BIN_URL} ; tar xvzf linux_amd64_client.tar.gz; 
 WORKDIR /npc
