change client network mode to host

--- a/docker-compose.client.yaml
+++ b/docker-compose.client.yaml
@@ -3,7 +3,7 @@ services:
   nps_client:
     image: mmfei/nps_client
     container_name: "nps_client"
-    # network_mode: "host"
+    network_mode: "host"
     restart: always
     volumes:
       - "./build_client/conf/:/npc/conf/"
